--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Rocky Planet Fact Sheet</h1>
   <table id="planets">
-    <tr>
+    <tr class = "planet_names">
       <th></th>
       <th>Mercury</th>
       <th>Venus</th>
@@ -16,60 +16,62 @@
       <th>Mars</th>
     </tr>
     <tr>
-      <td></td>
-      <td><img src="images/mercury.jpg" alt="Mercury"></td>
-      <td><img src="images/venus.jpg" alt="Venus"></td>
-      <td><img src="images/earth.jpg" alt="Earth"></td>
-      <td><img src="images/mars.jpg" alt="Mars"></td>
+      <td class = "sidebar">Images</td>
+      <div class = "imageback">
+        <td><img src="images/mercury.jpg" alt="Mercury"></td>
+        <td><img src="images/venus.jpg" alt="Venus"></td>
+        <td><img src="images/earth.jpg" alt="Earth"></td>
+        <td><img src="images/mars.jpg" alt="Mars"></td>
+      </div>  
     </tr>
     <tr>
-      <td>Mass (10<sup>24</sup>kg)</td>
-      <td>0.330</td>
-      <td>4.87</td>
-      <td>5.97</td>
-      <td>0.642</td>
+      <td class = "sidebar">Mass (10<sup>24</sup>kg)</td>
+      <td class = "mercury">0.330</td>
+      <td class = "venus">4.87</td>
+      <td class = "earth">5.97</td>
+      <td class = "mars">0.642</td>
     </tr>
     <tr>
-      <td>Diameter (km)</td>
-      <td>4879</td>
-      <td>12,104</td>
-      <td>12,756</td>
-      <td>6792</td>
+      <td class = "sidebar">Diameter (km)</td>
+      <td class = "mercury">4879</td>
+      <td class = "venus">12,104</td>
+      <td class = "earth">12,756</td>
+      <td class = "mars">6792</td>
     </tr>
     <tr>
-      <td>Density (kg/m<sup>3</sup>)</td>
-      <td>5429</td>
-      <td>5243</td>
-      <td>5514</td>
-      <td>3934</td>
+      <td class = "sidebar">Density (kg/m<sup>3</sup>)</td>
+      <td class = "mercury">5429</td>
+      <td class = "venus">5243</td>
+      <td class = "earth">5514</td>
+      <td class = "mars">3934</td>
     </tr>
     <tr>
-      <td>Gravity (m/s<sup>2</sup>)</td>
-      <td>3.7</td>
-      <td>8.9</td>
-      <td>9.8</td>
-      <td>3.7</td>
+      <td class = "sidebar">Gravity (m/s<sup>2</sup>)</td>
+      <td class = "mercury">3.7</td>
+      <td class = "venus">8.9</td>
+      <td class = "earth">9.8</td>
+      <td class = "mars">3.7</td>
     </tr>
     <tr>
-      <td>Orbital Period (days)</td>
-      <td>88.0</td>
-      <td>224.7</td>
-      <td>365.25</td>
-      <td>687.0</td>
+      <td class = "sidebar">Orbital Period (days)</td>
+      <td class = "mercury">88.0</td>
+      <td class = "venus">224.7</td>
+      <td class = "earth">365.25</td>
+      <td class = "mars">687.0</td>
     </tr>
     <tr>
-      <td>Surface Pressure (bars)</td>
-      <td>0</td>
-      <td>92</td>
-      <td>1</td>
-      <td>0.01</td>
+      <td class = "sidebar">Surface Pressure (bars)</td>
+      <td class = "mercury">0</td>
+      <td class = "venus">92</td>
+      <td class = "earth">1</td>
+      <td class = "mars">0.01</td>
     </tr>
     <tr>
-      <td>Length of Day(hours)</td>
-      <td>4222.6</td>
-      <td>2802.6</td>
-      <td>24</td>
-      <td>24.7</td>
+      <td class = "sidebar">Length of Day (hours)</td>
+      <td class = "mercury">4222.6</td>
+      <td class = "venus">2802.6</td>
+      <td class = "earth">24</td>
+      <td class = "mars">24.7</td>
     </tr>
   </table>
 </body>
