fix validation errors

--- a/index.html
+++ b/index.html
@@ -23,49 +23,49 @@
         <td><img src="images/mars.jpg" alt="Mars"></td> 
     </tr>
     <tr>
-      <td class = "sidebar">Mass <seq>(10<sup>24</sup>kg)</seq></td>
+      <td class = "sidebar">Mass (10<sup>24</sup>kg)</td>
       <td class = "mercury">0.330</td>
       <td class = "venus">4.87</td>
       <td class = "earth">5.97</td>
       <td class = "mars">0.642</td>
     </tr>
     <tr>
-      <td class = "sidebar">Diameter <seq>(km)</seq></td>
+      <td class = "sidebar">Diameter (km)</td>
       <td class = "mercury">4879</td>
       <td class = "venus">12,104</td>
       <td class = "earth">12,756</td>
       <td class = "mars">6792</td>
     </tr>
     <tr>
-      <td class = "sidebar">Density <seq>(kg/m<sup>3</sup>)</seq></td>
+      <td class = "sidebar">Density (kg/m<sup>3</sup>)</td>
       <td class = "mercury">5429</td>
       <td class = "venus">5243</td>
       <td class = "earth">5514</td>
       <td class = "mars">3934</td>
     </tr>
     <tr>
-      <td class = "sidebar">Gravity <seq>(m/s<sup>2</sup>)</seq></td>
+      <td class = "sidebar">Gravity (m/s<sup>2</sup>)</td>
       <td class = "mercury">3.7</td>
       <td class = "venus">8.9</td>
       <td class = "earth">9.8</td>
       <td class = "mars">3.7</td>
     </tr>
     <tr>
-      <td class = "sidebar">Orbital Period <seq>(days)</seq></td>
+      <td class = "sidebar">Orbital Period (days)</td>
       <td class = "mercury">88.0</td>
       <td class = "venus">224.7</td>
       <td class = "earth">365.25</td>
       <td class = "mars">687.0</td>
     </tr>
     <tr>
-      <td class = "sidebar">Surface Pressure <seq>(bars)</seq></td>
+      <td class = "sidebar">Surface Pressure (bars)</td>
       <td class = "mercury">0</td>
       <td class = "venus">92</td>
       <td class = "earth">1</td>
       <td class = "mars">0.01</td>
     </tr>
     <tr>
-      <td class = "sidebar">Length of Day <seq>(hours)</seq></td>
+      <td class = "sidebar">Length of Day (hours)</td>
       <td class = "mercury">4222.6</td>
       <td class = "venus">2802.6</td>
       <td class = "earth">24</td>
